<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BMISpecsActivity">

    <TextView
        android:id="@+id/BMI_Activity_text"
        android:layout_width="377dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/BMI_Activity_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="313dp"
        android:layout_height="120dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculatedBMIVal">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textBMIVal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:layout_weight="1"
                android:text="@string/BMIVal" />

            <TextView
                android:id="@+id/textColorRange"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:layout_weight="1"
                android:text="@string/ColorCode" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textBMIVal1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/BMIVal1" />

            <TextView
                android:id="@+id/textRange1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ColorRed" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textBMIVal2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/BMIVal2" />

            <TextView
                android:id="@+id/textRange2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ColorYellow" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textBMIVal3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/BMIVal3" />

            <TextView
                android:id="@+id/textRange3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ColorGreen" />

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textBMIVal4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:layout_weight="1"
                android:text="@string/BMIVal4" />

            <TextView
                android:id="@+id/textRange4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:layout_weight="1"
                android:text="@string/ColorYellow" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textBMIVal6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:layout_weight="1"
                android:text="@string/BMIVal5" />

            <TextView
                android:id="@+id/textRange5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:layout_weight="1"
                android:text="@string/ColorRed" />
        </TableRow>


    </TableLayout>

    <Button
        android:id="@+id/backButtonTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:onClick="back"
        android:text="@string/back_button"
        app:layout_constraintStart_toStartOf="@+id/BMI_Activity_text"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <TextView
        android:id="@+id/calculatedBMIVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:text=""
        app:layout_constraintStart_toStartOf="@+id/BMI_Activity_text"
        app:layout_constraintTop_toBottomOf="@+id/BMI_Activity_text" />

</androidx.constraintlayout.widget.ConstraintLayout>